[gd_scene load_steps=3 format=3 uid="uid://dl6n7678g0f18"]

[ext_resource type="Script" path="res://ver_1/character/hero/Trebbie/trebbie_attack.gd" id="1_dmnqs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nwjjw"]
size = Vector2(163.688, 36.125)

[node name="TrebbieAttack" type="Node2D"]
script = ExtResource("1_dmnqs")
initial_dmg = 100
action_name = "TrebbieAttack"
desc = "Trebbie thrusts her spear forward, dealing damage to enemies in a thin long direction"

[node name="AttackHitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitBox"]
position = Vector2(82, 0)
shape = SubResource("RectangleShape2D_nwjjw")

[node name="HitboxReset" type="Timer" parent="."]
